Add: Enhance utility functions and add comprehensive unit tests
- Refactored `LimitedInputStream` to apply `@NonNull` annotations and improved method signatures.
- Modified `XmlUtil`, `TextUtil`, and `Parameters` to improve JavaDoc clarity, consistency, and grammar.
- Reorganized enums and improved the switch case to use the `switch` expression in `LogFlag`.
- Introduced new test classes to validate utility methods and core functionality:
  - `ParametersTest`, `PersonTest`, `SimpleTokenizerTest`, `ProgramFormatterTest`, `LogFlagTest`, and more.
- Converted `DigestStrategy` to a record for simplifying data encapsulation in `HashUtil`.
- Added detailed package-level documentation to `com.acromere.util` for better onboarding and usage guidance.
- Streamlined `IteratorEnumerator.java` by replacing inline links for cleaner formatting.
- Improved test coverage with new classes: `JvmTest`, `ThreadInfoNameComparatorTest`, and `TypeReferenceTest`.