@@ -9,9 +9,9 @@ import java.util.Map;
  * This shutdown hook is used to ensure that the program eventually terminates
  * given a specific amount of time. There are times when misbehaving threads
  * cause the program not to exit cleanly. This hook waits for the program to
- * terminate for a specific amount of time. Once that time expires this hook
+ * terminate for a specific amount of time. Once that time expires, this hook
  * prints the list of running non-daemon threads and forces the program to stop
- * by calling Runtime.halt(). Unfortunately this also causes other shutdown
+ * by calling Runtime.halt(). Unfortunately, this also causes other shutdown
  * hooks to not execute if they have not started.
  *
  * @author soderquistmv
@@ -51,7 +51,7 @@ public class JvmSureStop extends Thread {
 			log.atSevere().log( "JVM did not exit cleanly. Here are the running non-daemon threads:" );
 			Map<Thread, StackTraceElement[]> threadStacks = Thread.getAllStackTraces();
 			threadStacks.keySet().stream().filter( t -> !t.isDaemon() ).forEach( thread -> {
-				log.atWarning().log( "Thread: %s %s[g=%s]", thread.getId(), thread.getName(), thread.getThreadGroup() );
+				log.atWarning().log( "Thread: %s %s[g=%s]", thread.threadId(), thread.getName(), thread.getThreadGroup() );
 				Arrays.stream( threadStacks.get( thread ) ).forEach( e -> log.atInfo().log( "  %s", e ) );
 			} );
 
